--- a/examples/SOAP Web Service/SOAP Client/README
+++ b/examples/SOAP Web Service/SOAP Client/README
@@ -1,2 +1,2 @@
 
-Raccoglie le classi necessarie per l'implementazione di un client SOAP
+Raccoglie le classi necessarie per l'implementazione di un client SOAP tramite l'utilizzo di Java e Spring Boot.
